scrollbar design fixed

--- a/source/XUI.css
+++ b/source/XUI.css
@@ -432,7 +432,13 @@
 		/** Firefox START **/
 		:where(.scrollbar-x, .scrollbar-y){
 			scrollbar-width: auto;
-			scrollbar-color: var(--color-main) transparent;
+		}
+
+		@supports (-moz-appearance:none){
+			:where(.scrollbar-x, .scrollbar-y){
+				scrollbar-width: auto;
+				scrollbar-color: var(--color-main) transparent;
+			}
 		}
 		/** Firefox END **/
 
